fixed a UI glitch that created extra spacing on bottom on mobile portrait mode

--- a/packages/ui/components/MainNavMobile.module.css
+++ b/packages/ui/components/MainNavMobile.module.css
@@ -11,7 +11,6 @@
 
 .main {
   background-color: white;
-  height: 100vh;
   min-height: -webkit-fill-available;
   width: 100%;
   flex-grow: 1;
